feat(ai): 实现AI代码生成类型智能路由功能
- 新增AiCodeGenTypeRoutingService接口及工厂配置
- 添加AUTO自动模式枚举值支持智能选择
- 实现应用控制器中的路由逻辑分支
- 添加基础工具基类和多种文件操作工具
- 更新JSON消息流处理器支持工具映射
- 修改截图工具配置和浏览器启动参数
- 移除过时的构建命令和聊天历史服务依赖
- 更新提示文件格式从txt到md并完善规则